# scnd-brain

./: .gitignore  db.py  developing-plan.md  models.py  pyproject.toml  scnd_brain.db
src/: config.py  db.py  models.py  scnd_brain.db
