[tool.poetry]
name = "scnd-brain"
version = "0.1.0"
description = ""
authors = ["wugd"]
readme = "README.md"
packages = [{include = "scnd_brain"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.7.0"
isort = "^5.12.0"
pydantic = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
